@@ -5,3 +5,10 @@ pm_to_blib
 *~
 MYMETA.*
 
+/AnyEvent-Twitter-Stream-*
+/.build
+/_build_params
+/Build
+!Build/
+!META.json
+!LICENSE
