@@ -1,25 +1,0 @@
-.gitignore
-Changes
-eg/track.pl
-inc/Module/Install.pm
-inc/Module/Install/AuthorTests.pm
-inc/Module/Install/Base.pm
-inc/Module/Install/Can.pm
-inc/Module/Install/Fetch.pm
-inc/Module/Install/Makefile.pm
-inc/Module/Install/Metadata.pm
-inc/Module/Install/Repository.pm
-inc/Module/Install/Win32.pm
-inc/Module/Install/WriteAll.pm
-lib/AnyEvent/Twitter/Stream.pm
-Makefile.PL
-MANIFEST			This list of files
-META.yml
-README
-t/00_compile.t
-t/streaming.t
-t/timeout.t
-xt/perlcritic.t
-xt/pod.t
-xt/podspell.t
-xt/synopsis.t
