@@ -1,5 +1,9 @@
 Revision history for Perl extension AnyEvent::Twitter::Stream
 
+{{$NEXT}}
+        - Make it non-trial
+        - Convert to Milla
+
 0.23  Sat Mar  9 23:33:48 PST 2013
         - Added on_direct_message support (semifor)
         - Fixed compression (perigrin)
